--- a/fixtures/second.css
+++ b/fixtures/second.css
@@ -2,13 +2,13 @@ html,body{
   height:100%;
 }
 body{
-  background:url(./second.png) no-repeat center center;
+  background:url("./second.png") no-repeat center center;
 }
 body:before{
-  content:"1421022898004";
+  content:"1421053965078";
 }
 body:after{
-  content:"1421022898004";
+  content:"1421053965078";
   display:block;
   height:4em;
   background:url(http://berabou.me/bower_components/vectorizer/images/ootani_oniji_1x.png);
