--- a/test/fixtures/second.black.css
+++ b/test/fixtures/second.black.css
@@ -11,3 +11,9 @@ body:after{
   height:4em;
   background:url('http://berabou.me/bower_components/vectorizer/images/ootani_oniji_1x.png');
 }
+article{
+  background:url("./second.png?3ocs8m") no-repeat center center;
+}
+section{
+  background:url("./second.png#3ocs8m") no-repeat center center;
+}
